[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/enemy.png" type="Texture" id=1]
[ext_resource path="res://entities/enemy/scripts/enemy_character_mover.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/enemy/enemy.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=2]
radius = 18.0

[sub_resource type="CircleShape2D" id=1]
radius = 18.0

[node name="Enemy" type="Area2D" groups=[
"enemy",
]]
collision_layer = 4
collision_mask = 2
script = ExtResource( 3 )

[node name="CharacterMover" parent="." instance=ExtResource( 2 )]
body_path = NodePath("..")

[node name="hitbox" type="Area2D" parent="."]
visible = false
position = Vector2( -0.25, 6 )
collision_layer = 8
collision_mask = 8
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( -0.25, 6 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
